--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "php": ">=7.0",
         "muan/laravel-acl": "^1.1",
+        "muan/laravel-comments": "^0.1.0",
         "intervention/image": "^2.4"
     },
     "autoload": {
