--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "php": ">=7.0",
         "muan/laravel-acl": "^1.1",
         "muan/laravel-comments": "^0.1.0",
+        "muan/laravel-tags": "^0.1.0",
         "intervention/image": "^2.4"
     },
     "autoload": {
