--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "name": "muan/laravel-admin",
     "description": "Admin package for Laravel",
-    "version": "0.3.0",
+    "version": "0.4.0",
     "type": "package",
-    "keywords": ["laravel", "admin", "panel", "role", "permission", "package"],
+    "keywords": ["laravel", "admin", "panel", "role", "permission", "package", "tags", "comments"],
     "license": "MIT",
     "authors": [
         {
